calendar/css/all.css
.button_container {
    position: relative;
}

.button_container.solo .hangouts_button {
    display: none;
}

.button_container.solo #jitsi_button {
    left: 0px;
}

#jitsi_button {
    min-width: 60px;
}

#jitsi_button a {
    display: block;
    text-decoration: none;
    background: transparent url('chrome-extension://__MSG_@@extension_id__/jitsi-logo-white-48x48.png') no-repeat;
    background-size: 20px 20px;
    background-position: left;
    text-indent: 20px;
    padding-left: 4px;
}

.jitsi_quick_add_icon {
    background: transparent url('chrome-extension://__MSG_@@extension_id__/jitsi-logo-grey.svg') no-repeat;
    background-size: contain;
    height: 16px;
    width: 16px;
    margin-left: 4px;
    margin-top: 8px;
}

.jitsi_quick_add_text_size {
    font-size: 14px
}

.jitsi_edit_page_icon {
    background: transparent url('chrome-extension://__MSG_@@extension_id__/jitsi-logo-grey.svg') no-repeat;
    background-size: contain;
    height: 20px;
    width: 20px;
    margin-left: 4px;
    margin-top: 4px;
}

.jitsi_ms_button {
    background: transparent url('chrome-extension://__MSG_@@extension_id__/jitsi-logo-blue.svg') no-repeat;
    width: 20px;
    height: 20px;
}

